# ml-feature-platform

./: Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: .gitignore
docs/: PHASE_1_GUIDE.md  PHASE_3_GUIDE.md  PHASE_4_GUIDE.md
infra/docker/: Dockerfile.serving
infra/k8s/base/: kustomization.yaml  serving-deployment.yaml  serving-service.yaml
infra/monitoring/prometheus/: prometheus.yml
scripts/: build_rag_pgvector_index.py  export_dbt_to_minio.py  export_features_5m_to_parquet.py  generate_entity_rows.py  init-infra.sh  kafka_to_minio.py  peek_topic.py  promote_model.py  run_rag_query.py  smoke_test_serving.py
src/data_generator/: config.py  schemas.py  txn_producer.py
src/dbt_features/: dbt_project.yml  profiles.yml
src/dbt_features/models/features/: schema.yml  user_daily_features.sql  user_rolling_features.sql
src/dbt_features/tests/: assert_no_negative_sums.sql
src/feature_store/: feature_repo.py  feature_store.yaml
src/flink_jobs/: pom.xml
src/orchestration/jobs/: feature_pipeline.py
src/rag_agent/: agent.py  index_store.py  langchain_chain.py
src/serving/: app.py
src/training/configs/: default.yaml
src/training/models/: anomaly_detector.py
src/training/scripts/: train.py
tests/: conftest.py
tests/integration/: test_phase1_pipeline.py
tests/unit/test_data_generator/: test_txn_producer.py
tests/unit/test_orchestration/: test_feature_pipeline.py
tests/unit/test_rag_agent/: test_agent.py  test_index_store.py  test_langchain_chain.py
tests/unit/test_serving/: test_app.py
(+15 files in other folders)
