[project]
name = "ml-feature-platform"
version = "0.1.0"
description = "Real-time ML feature platform with streaming ingestion, feature store, model training/serving, and observability"
requires-python = ">=3.11"
dependencies = [
    # Streaming & data
    "confluent-kafka>=2.3",
    "deltalake>=0.15",
    "pyarrow>=15.0",
    "pandas>=2.2",
    # Feature store
    "feast>=0.37",
    # ML training
    "torch>=2.2",
    "scikit-learn>=1.4",
    "mlflow>=2.11",
    # Serving
    "fastapi>=0.110",
    "uvicorn>=0.27",
    # RAG
    "langchain>=0.1",
    "pgvector>=0.2",
    # Orchestration
    "dagster>=1.6",
    "dagster-webserver>=1.6",
    # Observability
    "prometheus-client>=0.20",
    # Utils
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
